--- a/clients.html
+++ b/clients.html
@@ -25,7 +25,7 @@
     <main>
         <section class="filters">
             <div class="container">
-                <form action="">
+                <form action="" class="main__form">
                     <label for="search">Поиск по имени</label>
                     <input type="text" id="search" name="search" placeholder="Введите имя" required>
                     <label for="search">Сортировка по имени</label>
@@ -324,7 +324,7 @@
                         <td>89920093303</td>
                         <td>9.03.2004</td>
                         <td>15.08.2024</td>
-                        <td><i class="fa fa-book" aria-hidden="true"></i></td>
+                        <td onclick="MicroModal.show('history-modal')"><i class="fa fa-book" aria-hidden="true"></i></td>
                         <td onclick="MicroModal.show('edit-modal')"><i class="fa fa-pencil" aria-hidden="true"></i></td>
                         <td onclick="MicroModal.show('delete-modal')" ><i class="fa fa-trash" aria-hidden="true"></i></td>
                     </tr>
@@ -411,6 +411,52 @@
           </div>
         </div>
       </div>
+
+      <div class="modal micromodal-slide" id="history-modal" aria-hidden="true">
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+            <header class="modal__header">
+              <h2 class="modal__title" id="modal-1-title">
+                История заказов
+              </h2>
+              <small> Фамилия Имя Отчество</small>
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+            </header>
+            <main class="modal__content" id="modal-1-content">
+                <form id="registration-form">
+                        <div class="order">
+                            <div class="order_info">
+                                <h3 class="order_number" >Заказ №1</h3>
+                                <time class="order_date" >Дата оформления : 2025-01-13 09:25:30</time>
+                                <p class="order_total">Общая сумма: 300.00</p>
+                            </div>
+                            <table class="order_items">
+                                <tr>
+                                    <th>ИД</th>
+                                    <th>Название товара</th>
+                                    <th>Количество</th>
+                                    <th>Цена</th>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Футболка</td>
+                                    <td>10</td>
+                                    <td>10000</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Футболка</td>
+                                    <td>5</td>
+                                    <td>5000</td>
+                                </tr>
+                            </table>
+                        </div>
+                </form>
+            </main>
+          </div>
+        </div>
+      </div>
+
     <script defer src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
     <script defer src="scripts/initClientsModal.js"></script>
 </body>
